Bizfi Production/src/objects/Sales_Rep_Report_Card__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Sent_Average_Min__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Agreement Sent Average Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Sent_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agreement Sent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Sent_Total_Work_Hours__c</fullName>
        <formula>Agreement_Sent_Average_Min__c * Agreement_Sent_Count__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Sent Total Work – Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Sent_Total_Work_Min__c</fullName>
        <formula>Agreement_Sent_Average_Min__c * Agreement_Sent_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Sent Total Work – Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Average_Min__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Agreement Signed Average Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agreement Signed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Total_Work_Hours__c</fullName>
        <formula>Agreement_Signed_Count__c * Agreement_Signed_Average_Min__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Signed Total Work – Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Total_Work_Min__c</fullName>
        <formula>Agreement_Signed_Count__c * Agreement_Signed_Average_Min__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Signed Total Work – Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_In_Average_Min__c</fullName>
        <defaultValue>4</defaultValue>
        <label>Application In Average Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_In_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Application In Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_In_Total_Work_Hours__c</fullName>
        <formula>Application_In_Average_Min__c * Application_In_Count__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application In Total Work - Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_In_Total_Work_Min__c</fullName>
        <formula>Application_In_Count__c * Application_In_Average_Min__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application In Total Work - Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Missing_Info_Average_Min__c</fullName>
        <defaultValue>4.00</defaultValue>
        <label>Application Missing Info Average Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Missing_Info_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Application Missing Info Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Missing_Info_Total_Work_Hour__c</fullName>
        <formula>Application_Missing_Info_Average_Min__c * Application_Missing_Info_Count__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Missing Info Total Work Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Missing_Info_Total_Work_Min__c</fullName>
        <formula>Application_Missing_Info_Count__c * Application_Missing_Info_Average_Min__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Missing Info Total Work Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Out_Average_Min__c</fullName>
        <defaultValue>4</defaultValue>
        <label>Application Out Average Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Out_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Application Out Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Out_Total_Work_Hours__c</fullName>
        <formula>Application_Out_Average_Min__c * Application_Out_Count__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Out Total Work – Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Out_Total_Work_Min__c</fullName>
        <formula>Application_Out_Count__c * Application_Out_Average_Min__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Out Total Work – Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Average_Min__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Approved Average Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Total_Work_Hours__c</fullName>
        <formula>Approved_Average_Min__c * Approved_Count__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Total Work – Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Total_Work_Min__c</fullName>
        <formula>Approved_Average_Min__c * Approved_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Total Work – Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Agreement_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Agreement Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Agreement_Sent_to_Funded__c</fullName>
        <formula>IF(Last_7_Days_Agreement_Sent__c = 0,0, Last_7_Days_Fundings__c / Last_7_Days_Agreement_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days - Agreement Sent to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Agreement_Sent_to_Signed__c</fullName>
        <formula>IF( Last_7_Days_Agreement_Sent__c = 0,0, Last_7_Days_Agreement_Signed__c / Last_7_Days_Agreement_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days - Agreement Sent to Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Agreement_Signed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Agreement Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Agreement_Signed_to_Funded__c</fullName>
        <formula>IF( Last_7_Days_Agreement_Signed__c = 0,0, Last_7_Days_Fundings__c / Last_7_Days_Agreement_Signed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days - Agreement Signed to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Approval_to_Agreement_Sent__c</fullName>
        <formula>IF( Last_7_Days_Approvals__c = 0,0, Last_7_Days_Agreement_Sent__c / Last_7_Days_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days - Approval to Agreement Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Approvals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Approvals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Approvals_to_Funding__c</fullName>
        <formula>IF(Last_7_Days_Approvals__c = 0, 0 , Last_7_Days_Fundings__c / Last_7_Days_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days - Approvals to Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Apps_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Apps Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Apps_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Apps Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Apps_Sent_to_App_Received__c</fullName>
        <formula>IF(Last_7_Days_Apps_Sent__c = 0, 0 , Last_7_Days_Apps_Received__c  /  Last_7_Days_Apps_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days - Apps Sent to App Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Fundings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Fundings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Lead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Leads_to_Submission__c</fullName>
        <formula>IF( Last_7_Days_Lead__c = 0, 0,Last_7_Days_Total_Subs__c /  Last_7_Days_Lead__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days - Leads to Submission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Organic_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Organic Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Subs_to_Approval__c</fullName>
        <formula>IF(Last_7_Days_Total_Subs__c = 0, 0 , Last_7_Days_Approvals__c / Last_7_Days_Total_Subs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days - Subs to Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_7_Days_Total_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last 7 Days - Total Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Agreement_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Agreement Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Agreement_Sent_to_Funded__c</fullName>
        <formula>IF( Last_Month_Agreement_Sent__c = 0,0, Last_Month_Fundings__c / Last_Month_Agreement_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month - Agreement Sent to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Agreement_Sent_to_Signed__c</fullName>
        <formula>IF( Last_Month_Agreement_Sent__c  = 0,0, Last_Month_Agreement_Signed__c / Last_Month_Agreement_Sent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month - Agreement Sent to Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Agreement_Signed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Agreement Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Agreement_Signed_to_Funded__c</fullName>
        <formula>IF(Last_Month_Agreement_Signed__c= 0, 0, Last_Month_Fundings__c / Last_Month_Agreement_Signed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month - Agreement Signed to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Approval_to_Agreement_Sent__c</fullName>
        <formula>IF(Last_Month_Approvals__c = 0,0, Last_Month_Agreement_Sent__c / Last_Month_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month - Approval to Agreement Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Approvals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Approvals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Approvals_to_Funding__c</fullName>
        <formula>IF(Last_Month_Approvals__c = 0, 0 , Last_Month_Fundings__c /  Last_Month_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month - Approvals to Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Apps_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Apps Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Apps_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Apps Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Apps_Sent_to_App_Received__c</fullName>
        <formula>IF(Last_Month_Apps_Sent__c = 0, 0 , Last_Month_Apps_Received__c/  Last_Month_Apps_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month - Apps Sent to App Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Fundings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Fundings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Lead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Leads_to_Submission__c</fullName>
        <formula>IF(Last_Month_Lead__c =0,0,Last_Month_Total_Subs__c/  Last_Month_Lead__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month - Leads to Submission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Organic_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Organic Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Subs_to_Approval__c</fullName>
        <formula>IF(Last_Month_Total_Subs__c = 0, 0 , Last_Month_Approvals__c /  Last_Month_Total_Subs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month - Subs to Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Total_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Month - Total Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Average_Min__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Lead Average Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Total_Work_Hours__c</fullName>
        <formula>Lead_Average_Min__c * Lead_Count__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Total Work – Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Total_Work_Min__c</fullName>
        <formula>Lead_Average_Min__c * Lead_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Total Work – Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Agreement_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Agreement Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Agreement_Sent_to_Funded__c</fullName>
        <formula>IF(MTD_Agreement_Sent__c= 0,0, MTD_Fundings__c / MTD_Agreement_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Agreement Sent to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Agreement_Sent_to_Signed__c</fullName>
        <formula>IF( MTD_Agreement_Sent__c = 0,0,MTD_Agreement_Signed__c /  MTD_Agreement_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Agreement Sent to Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Agreement_Signed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Agreement Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Agreement_Signed_to_Funded__c</fullName>
        <formula>IF(MTD_Agreement_Signed__c=0,0, MTD_Fundings__c/ MTD_Agreement_Signed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Agreement Signed to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Approval_to_Agreement_Sent__c</fullName>
        <formula>IF(MTD_Approvals__c= 0,0,MTD_Agreement_Sent__c / MTD_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Approval to Agreement Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Approvals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Approvals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Approvals_to_Funding_Score__c</fullName>
        <formula>IF( MTD_Approvals_to_Funding__c &lt; 0.30, 0, 
IF( MTD_Approvals_to_Funding__c &gt;= 0.30 &amp;&amp; MTD_Approvals_to_Funding__c &lt; 0.40 , 1,  
IF( MTD_Approvals_to_Funding__c &gt;= 0.40 &amp;&amp; MTD_Approvals_to_Funding__c &lt; 0.50 , 2,  
IF( MTD_Approvals_to_Funding__c &gt;= 0.50 &amp;&amp; MTD_Approvals_to_Funding__c &lt; 0.60 , 3,  
IF( MTD_Approvals_to_Funding__c &gt;= 0.60 &amp;&amp; MTD_Approvals_to_Funding__c &lt; 0.70 , 4,  
IF( MTD_Approvals_to_Funding__c &gt;= 0.70, 5, 0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Approvals to Funding Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Approvals_to_Funding__c</fullName>
        <formula>IF(MTD_Approvals__c = 0, 0 , MTD_Fundings__c/ MTD_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Approvals to Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Apps_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Apps Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Apps_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Apps Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Apps_Sent_to_App_Received__c</fullName>
        <formula>IF(MTD_Apps_Sent__c = 0, 0 , MTD_Apps_Received__c  / MTD_Apps_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Apps Sent to App Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Fundings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Fundings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Lead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Leads_to_Submission_Score__c</fullName>
        <formula>IF( MTD_Leads_to_Submission__c &lt; 0.05, 0,
IF( MTD_Leads_to_Submission__c &gt;= 0.05 &amp;&amp; MTD_Leads_to_Submission__c &lt; 0.08 , 1,
IF( MTD_Leads_to_Submission__c &gt;= 0.08 &amp;&amp; MTD_Leads_to_Submission__c &lt; 0.10 , 2,
IF( MTD_Leads_to_Submission__c &gt;= 0.10 &amp;&amp; MTD_Leads_to_Submission__c &lt; 0.12 , 3,
IF( MTD_Leads_to_Submission__c &gt;= 0.02 &amp;&amp; MTD_Leads_to_Submission__c &lt; 0.15 , 4,
IF( MTD_Leads_to_Submission__c &gt;= 0.15, 5, 0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Leads to Submission Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Leads_to_Submission__c</fullName>
        <formula>If(MTD_Lead__c =0,0,MTD_Total_Subs__c/ MTD_Lead__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Leads to Submission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Organic_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Organic Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Score__c</fullName>
        <formula>MTD_Approvals_to_Funding_Score__c + MTD_Leads_to_Submission_Score__c + MTD_Subs_to_Approval_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Subs_to_Approval_Score__c</fullName>
        <formula>IF( MTD_Subs_to_Approval__c &lt; 0.40, 0, 
IF( MTD_Subs_to_Approval__c &gt;= 0.40 &amp;&amp; MTD_Subs_to_Approval__c &lt; 0.50 , 1,
IF( MTD_Subs_to_Approval__c &gt;= 0.50 &amp;&amp; MTD_Subs_to_Approval__c &lt; 0.60 , 2, 
IF( MTD_Subs_to_Approval__c &gt;= 0.60 &amp;&amp; MTD_Subs_to_Approval__c &lt; 0.70 , 3, 
IF( MTD_Subs_to_Approval__c &gt;= 0.70 &amp;&amp; MTD_Subs_to_Approval__c &lt; 0.80 , 4, 
IF( MTD_Subs_to_Approval__c &gt;= 0.80, 5, 0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Subs to Approval Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Subs_to_Approval__c</fullName>
        <formula>IF(MTD_Total_Subs__c = 0, 0 , MTD_Approvals__c/  MTD_Total_Subs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD - Subs to Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Total_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD - Total Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pass_Fail_Indicator__c</fullName>
        <formula>CASE( Pass_Fail_Result__c, &quot;Pass&quot;, IMAGE(&quot;/resource/PassFail/PassFail/Pass.png&quot;, &quot;No Result&quot; ),&quot;Fail&quot;, IMAGE(&quot;/resource/PassFail/PassFail/Fail.png&quot;, &quot;No Result&quot; ),&quot;No Result&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass / Fail Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pass_Fail_Result__c</fullName>
        <formula>IF(OR(AND(Yesterday_Dials__c &gt;= 75,Yesterday_Organic_Subs__c &gt;= 2),AND(Yesterday_Dials__c &gt;= 75, Yesterday_Fundings__c &gt;=1 ), AND(Yesterday_Organic_Subs__c &gt;= 2,Yesterday_Fundings__c &gt;=1)) ,
&quot;Pass&quot; , &quot;Fail&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass / Fail Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sales Rep ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Rep_Maximum_Workload_Hours__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Sales Rep Maximum Workload – Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Role__c</fullName>
        <formula>Sales_Rep__r.UserRole.Name</formula>
        <label>Sales Rep Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Workload_Hours__c</fullName>
        <formula>Agreement_Sent_Total_Work_Hours__c + Agreement_Signed_Total_Work_Hours__c + Application_Out_Total_Work_Hours__c + Approved_Total_Work_Hours__c +  Lead_Total_Work_Hours__c + Underwriting_Total_Work_Hours__c +  Application_Missing_Info_Total_Work_Hour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Workload – Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Workload_Min__c</fullName>
        <formula>Agreement_Sent_Total_Work_Min__c + Agreement_Signed_Total_Work_Min__c + Application_Out_Total_Work_Min__c + Approved_Total_Work_Min__c + Lead_Total_Work_Min__c + Underwriting_Total_Work_Min__c +  Application_Missing_Info_Total_Work_Min__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Workload – Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Rep_Report_Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submissions_Required_for_Today_Bonus__c</fullName>
        <formula>99999999</formula>
        <label>Submissions Required for Today Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submissions_Today_Bonus__c</fullName>
        <formula>25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submissions Today Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submissions_Today__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Submissions Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriting_Average_Min__c</fullName>
        <defaultValue>11</defaultValue>
        <label>Underwriting Average Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriting_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Underwriting Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriting_Total_Work_Hours__c</fullName>
        <formula>Underwriting_Average_Min__c * Underwriting_Count__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underwriting Total Work – Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriting_Total_Work_Min__c</fullName>
        <formula>Underwriting_Average_Min__c * Underwriting_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underwriting Total Work – Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Agreement_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Agreement Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Agreement_Sent_to_Funded__c</fullName>
        <formula>IF(YTD_Agreement_Sent__c = 0,0, YTD_Fundings__c / YTD_Agreement_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD - Agreement Sent to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Agreement_Sent_to_Signed__c</fullName>
        <formula>IF( YTD_Agreement_Sent__c = 0,0, YTD_Agreement_Signed__c / YTD_Agreement_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD - Agreement Sent to Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Agreement_Signed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Agreement Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>